# oop-bank-account

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/bank_account/: account.py
tests/: test_account.py
