[project]
name = "oop-bank-account"
version = "0.1.0"
description = "Simple OOP bank account"
authors = [
    {name = "Sivapriya",email = "m.sivapriya.2004@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "oop_bank_account", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=bank_account --cov-fail-under=90"

[tool.pylint]
disable = ["missing-module-docstring"]
